--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "next": "14.1.0",
-    "react": "^18.3",
-    "react-dom": "^18.3",
-    "thirdweb": "^5"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@thirdweb-dev/react": "^4.4.8",
+    "@thirdweb-dev/sdk": "^4.0.23",
+    "@thirdweb-dev/chains": "^0.1.25",
+    "ethers": "^5.7.2",
+    "@thirdweb-dev/wallets": "^2.4.4",
+    "@tanstack/react-query": "4.29.5"
   },
   "devDependencies": {
     "@types/node": "^20",
