--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "@thirdweb-dev/sdk": "^4.0.23",
     "@thirdweb-dev/chains": "^0.1.25",
     "ethers": "^5.7.2",
-    "@thirdweb-dev/wallets": "^2.4.4",
-    "@tanstack/react-query": "4.29.5"
+    "@thirdweb-dev/wallets": "^0.2.35"
   },
   "devDependencies": {
     "@types/node": "^20",
